--- a/src/components/logo/logo.less
+++ b/src/components/logo/logo.less
@@ -1,8 +1,9 @@
 .logo-container {
-  width:100px;
+  margin: 10px 0 10px 0;
   text-align: center;
   .logo-img {
-    width: 100px;
-    height: 100px;
+    width: 300px;
+    height: 300px;
+    border-radius: 150px;
   }
 }
