--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -1,8 +1,55 @@
-body{
+body {
   margin: 0;
   padding: 0;
 }
-.my-navbar{
+
+.my-navbar {
   color: #fff;
   background-color: #1677ff;
+}
+
+.main {
+  // position: relative;
+  // height: 100vh;
+  // display: flex;
+  // flex-direction: column;
+}
+
+.body {
+  font-size: 50px;
+  // position: absolute;
+}
+
+.top {
+  // position: fixed;
+  // top: 0;
+  // width: 100%;
+  // flex: 0;
+  // border-bottom: solid 1px var(--adm-color-border);
+}
+
+.bottom {
+  position: fixed;
+  bottom: 0;
+  background-color: #fff;
+  border-bottom: solid 1px #888888;
+  width: 100%;
+}
+
+.personal {
+  margin-top: 4vh;
+
+  font-size: 2vh;
+  .image{
+    text-align: center;
+    margin-bottom: 4vh;
+  }
+  .name{
+    text-align: center;
+    font-size: 2.5vh;
+  }
+  .details{
+    margin-top: 5vh;
+    padding: 1vh;
+  }
 }
