完成聊天界面基本功能

--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -34,12 +34,21 @@ body {
 
 .bottom {
   position: fixed;
-  bottom: 0;
   background-color: #fff;
   border-bottom: solid 1px #888888;
   width: 100%;
+  bottom: 0;
+
 }
 
+.move{
+  translate: 0 -20vh;
+}
+.emoji{
+  font-size: 3vh;
+  text-align: center;
+  // border: solid 1px #999999;
+}
 .personal {
   margin-top: 4vh;
 
